# spotk

./: Cargo.toml  README.md
src/: cache.rs  color_spinner.rs  config.rs  config.toml  main.rs  paths.rs  schema.sql  spotify.rs  track.rs
