[package]
name = "spotk"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"]}
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
rspotify = { version = "0.12", default-features = false, features = ["client-ureq", "ureq-rustls-tls"] }
rusqlite = { version = "0.30", features = ["bundled"] }
base62 = "2.0"
colored = "2.1"
